welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: type mismatch;
 found   : Unit
 required: Int
 	ado = ado + 1
            ^countTeen:8: error: type mismatch;
 found   : Unit
 required: Int
 	ado = ado + 1
            ^countTeen:11: error: type mismatch;
 found   : Unit
 required: Int
 	ado = ado + 1
            ^countTeen:14: error: type mismatch;
 found   : Unit
 required: Int
 	ado = ado + 1
            ^